pagina del link terminada

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,13 @@
     <link href="pagina/css/style.css" rel="stylesheet">
 
     <link href="pagina/css/estilos-imagenes.css" rel="stylesheet">
+    <style>
+       #map {
+        height: 400px;
+        width: 100%;
+       }
+    </style>
+
 
     <link href="pagina/css/animate.css" rel="stylesheet">
     <!-- Responsive CSS -->
@@ -460,20 +467,8 @@
                             <div><span class="pe-7s-science"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3>Modern Look<span>/</span></h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                        <!-- END SINGLE FEATURE -->
-
-
-                        <!-- FEATURE -->
-                        <div class="left_single_feature">
-                            <!-- ICON -->
-                            <div><span class="pe-7s-look"></span></div>
-
-                            <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3>Minimal Layout<span>/</span></h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3>Aulas<span>/</span></h3>
+                            <p>"Todas nuestras amplias aulas están equipadas con un ambiente acogedor y a la vez con dispositivos multimedia y acceso a Internet, permitiendo al docente y a los estudiantes el uso de última tecnología para el desarrollo de las clases."</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -482,8 +477,8 @@
                         <div class="feature_iphone">
                             <!-- FEATURE PHONE IMAGE -->
                             <img class="wow bounceIn imagenes" data-wow-duration="1s" src="images/areadejuegos.jpg" alt="">
+                            <img class="wow bounceIn imagenes" data-wow-duration="1s" src="images/niñoconlaptop.jpg" alt="">
                             <img class="wow bounceIn imagenes" data-wow-duration="1s" src="images/areadejuegos1.jpg" alt="">
-                            <img class="wow bounceIn imagenes" data-wow-duration="1s" src="images/areadejuegos2.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-md-4 left_no_padding wow fadeInRight" data-wow-duration="1s">
@@ -491,35 +486,26 @@
                         <!-- FEATURE -->
                         <div class="right_single_feature">
                             <!-- ICON -->
+                            <div><span class="pe-7s-science"></span></div>
+
+                            <!-- FEATURE HEADING AND DESCRIPTION -->
+                            <h3><span>/</span>Área de Juegos</h3>
+                            <p>Tenemos una amplia área de juegos, bien implementada, tenemos los juegos muy protegidos
+                            para que no suceda ningun tipo de accidente y llamativos para que los niños se sientan muy tranquilos y con
+                            ganas de jugar y asi no temer al quedarse.</p>
+                        </div>
+                        <!-- END SINGLE FEATURE -->
+
+
+                        <!-- FEATURE -->
+                        <div class="right_single_feature">
+                            <!-- ICON -->
                             <div><span class="pe-7s-monitor"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Retina ready</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                        <!-- END SINGLE FEATURE -->
-
-
-                        <!-- FEATURE -->
-                        <div class="right_single_feature">
-                            <!-- ICON -->
-                            <div><span class="pe-7s-phone"></span></div>
-
-                            <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Responsive Ready</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                        <!-- END SINGLE FEATURE -->
-
-
-                        <!-- FEATURE -->
-                        <div class="right_single_feature">
-                            <!-- ICON -->
-                            <div><span class="pe-7s-gleam"></span></div>
-
-                            <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Clean Code</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3><span>/</span>Computación</h3>
+                            <p>En este taller contamos con laptops para cada alumno de un buen rendimiento y buena capacidad para que desde este nivel empiecen a aprender
+                            de la tecnología que ellos necesitan saber.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
                     </div>
@@ -538,10 +524,10 @@
         <div class="container">
             <div class="row wow fadeInLeftBig" data-wow-duration="1s">
                 <div class="col-md-9">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                    <p>Para disfrutar de todos estos servicios y de una educación personalizada y de calidad, sólo Registrese</p>
                 </div>
                 <div class="col-md-3">
-                    <a class="btn btn-primary btn-action" href="#" role="button">Download Now</a>
+                    <a class="btn btn-primary btn-action" href="Registrar.jsp" role="button">Registrar</a>
                 </div>
             </div>
         </div>
@@ -559,8 +545,9 @@
                     <div class="col-md-10 col-md-offset-1 wow fadeInBig" data-wow-duration="1s">
                         <!-- APPS SCREEN TITLE -->
                         <div class="section_title">
-                            <h2>Screenshots</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                            <h2>Galería</h2>
+                            <p>En esta galería mostramos cada fotografía real de nuestros alumnos en pleno proceso educativo y/o en eventos que se realice
+                            dentro de la institución como de manera externa.</p>
                         </div>
                         <!-- END APPS SCREEN TITLE -->
                     </div>
@@ -573,34 +560,25 @@
 
                     <!-- APPS SCREEN IMAGES -->
                     <div class="item">
-                    <a href="pagina/images/screens/iPhone04.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone04.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                    <a href="images/fotocolegio.jpg" rel="prettyPhoto[pp_gal]"><img src="images/fotocolegio.jpg" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="pagina/images/screens/iPhone05.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone05.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/fotodiadelamadre.jpg" rel="prettyPhoto[pp_gal]"><img src="images/fotodiadelamadre.jpg" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="pagina/images/screens/iPhone06.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone06.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/diploma.jpg" rel="prettyPhoto[pp_gal]"><img src="images/diploma.jpg" alt="APPS SCREEN" /></a>
                     </div>
                     <div class="item">
-                        <a href="pagina/images/screens/iPhone07.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone07.png" width="60" height="60" alt="APPS SCREEN" /></a>
-                    </div>
-                    <div class="item">
-                        <a href="pagina/images/screens/iPhone08.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone08.png" width="60" height="60" alt="APPS SCREEN" /></a>
-                    </div>
-                    <div class="item">
-                        <a href="pagina/images/screens/iPhone09.png" rel="prettyPhoto[pp_gal]"><img src="pagina/images/iPhone09.png" width="60" height="60" alt="APPS SCREEN" /></a>
+                        <a href="images/fotolaptop.jpg" rel="prettyPhoto[pp_gal]"><img src="images/fotolaptop.jpg" alt="APPS SCREEN" /></a>
+                        <br>
+                        <br>
+                        <a href="images/minichef.jpg" rel="prettyPhoto[pp_gal]"><img src="images/minichef.jpg" alt="APPS SCREEN" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
     <!-- ENS APPS SCREEN -->
-
-
-
 
 
 <!-- =========================
@@ -614,30 +592,30 @@
                 <div class="row text-center">
                     <div class="col-md-3">
                         <div class="single_fun_facts">
-                            <i class="pe-7s-cloud-download"></i>
-                            <h2><span  class="counter_num">699</span> <span>+</span></h2>
-                            <p>Downloads</p>
+                            <i class="pe-7s-cloud-upload"></i>
+                            <h2><span  class="counter_num">60</span> <span>+</span></h2>
+                            <p>Registros</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_fun_facts">
                             <i class="pe-7s-look"></i>
-                            <h2><span  class="counter_num">1999</span> <span>+</span></h2>
-                            <p>Likes</p>
+                            <h2><span  class="counter_num">200</span> <span>+</span></h2>
+                            <p>Visitas</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_fun_facts">
                             <i class="pe-7s-comment"></i>
-                            <h2><span  class="counter_num">199</span> <span>+</span></h2>
-                            <p>Feedbacks</p>
+                            <h2><span  class="counter_num">200</span> <span>+</span></h2>
+                            <p>Comentarios</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_fun_facts">
-                            <i class="pe-7s-cup"></i>
-                            <h2><span  class="counter_num">10</span> <span>+</span></h2>
-                            <p>Awards</p>
+                            <i class="pe-7s-like2"></i>
+                            <h2><span  class="counter_num">200</span> <span>+</span></h2>
+                            <p>Me Gusta</p>
                         </div>
                     </div>
                 </div>
@@ -656,8 +634,8 @@
                 <div class="col-md-10 col-md-offset-1 wow bounceIn">
                     <!-- Start Contact Section Title-->
                     <div class="section_title">
-                        <h2>Get in touch</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                        <h2>Ubícanos</h2>
+                        <p>Jr. Franciso Bolognesi 333 Distrito: Independencia Departamento: Lima País: Perú</p>
                     </div>
                 </div>
             </div>
@@ -665,33 +643,22 @@
             <div class="contact_form wow bounceIn">
                 <div class="container">
 
-                <!-- START ERROR AND SUCCESS MESSAGE -->
-                    <div class="form_error text-center">
-                        <div class="name_error hide error">Please Enter your name</div>
-                        <div class="email_error hide error">Please Enter your Email</div>
-                        <div class="email_val_error hide error">Please Enter a Valid Email Address</div>
-                        <div class="message_error hide error">Please Enter Your Message</div>
-                    </div>
-                    <div class="Sucess"></div>
-                <!-- END ERROR AND SUCCESS MESSAGE -->
-
-                <!-- CONTACT FORM starts here, Go to contact.php and add your email ID, thats it.-->
-                    <form role="form" action="contact.php">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <input type="text" class="form-control" id="name" placeholder="Name">
-                                <input type="email" class="form-control" id="email" placeholder="Email">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject">
-                            </div>
-
-
-                            <div class="col-md-8">
-                                <textarea class="form-control" id="message" rows="25" cols="10" placeholder="  Message Texts..."></textarea>
-                                <button type="button" class="btn btn-default submit-btn form_submit">SEND MESSAGE</button>
-                            </div>
-                        </div>
-                    </form>
-                    <!-- END FORM -->
+                    <h3>Dirección en Google Maps</h3>
+                    <div id="map"></div>
+                    <script>
+                      function initMap() {
+                        var uluru = {lat: -11.990648, lng: -77.047810};
+                        var map = new google.maps.Map(document.getElementById('map'), {
+                          zoom: 16,
+                          center: uluru
+                        });
+                        var marker = new google.maps.Marker({
+                          position: uluru,
+                          map: map
+                        });
+                      }
+                    </script>
+                    <br>
                 </div>
             </div>
         </div>
@@ -707,35 +674,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
-
                         <!-- Start Subscribe Section Title -->
                         <div class="section_title">
-                            <h2>SUBSCRIBE US</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                            <h2>Nuestras Redes Sociales</h2>
+                            <p>Nos pueden seguir en nuestras redes sociales como facebook, twitter, instagram y en nuestro canal de youtube en donde subimos contenido cuando hay un evento, y para obtener información tenemos el facebook y el whatsapp para comunicarse con nosotros</p>
                         </div>
                         <!-- End Subscribe Section Title -->
                     </div>
                 </div>
             </div>
 
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row  wow lightSpeedIn">
-                    <div class="col-md-6 col-md-offset-3">
+                    <div class="col-md-6 col-md-offset-3"> -->
                         <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
-                        <div class="subscription-success"></div>
-                        <div class="subscription-error"></div>
+                        <!-- <div class="subscription-success"></div>
+                        <div class="subscription-error"></div> -->
                         <!-- Check this topic on how to add email subscription list, http://kb.mailchimp.com/lists/signup-forms/host-your-own-signup-forms -->
-                        <form id="mc-form" action="https://designscrazed.us8.list-manage.com/subscribe/post" method="POST" class="subscribe_form">
+                        <!-- <form id="mc-form" action="https://designscrazed.us8.list-manage.com/subscribe/post" method="POST" class="subscribe_form">
                         <input type="hidden" name="u" value="6908378c60c82103f3d7e8f1c">
                         <input type="hidden" name="id" value="8c5074025d">
-                            <div class="form-group">
+                            <div class="form-group"> -->
                                 <!-- EMAIL INPUT BOX -->
-                                <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" class="required email form-control" id="mce-EMAIL" placeholder="Enter Email Address" value="" >
-                            </div>
+                                <!-- <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" class="required email form-control" id="mce-EMAIL" placeholder="Enter Email Address" value="" >
+                            </div> -->
                                 <!-- SUBSCRIBE BUTTON -->
-                            <button type="submit" class="btn btn-default subs-btn">Submit</button>
+                            <!-- <button type="submit" class="btn btn-default subs-btn">Submit</button>
                         </form>
-                    </div>
+                    </div> -->
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 wow bounceInLeft">
@@ -776,7 +742,7 @@
                     <div class="copy_right_text">
                     <!-- COPYRIGHT TEXT -->
                         <p>Copyright &copy; 2017. All Rights Reserved.</p>
-                        <p>A theme by <a href="https://www.instagram.com/iamoscarbc/">UCV DEVELOPERS</a></p>
+                        <p>Diseñado por <a href="https://www.instagram.com/iamoscarbc/">UCV DEVELOPERS</a></p>
                     </div>
 
                 </div>
@@ -810,6 +776,9 @@
     <script src="pagina/js/waypoints.min.js"></script>
     <script src="pagina/js/jquery.counterup.min.js"></script>
     <script src="pagina/js/script.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwuOmjUVw8xYM5M7yy9mZFvEGZ04Zhs7M&callback=initMap">
+    </script>
 
 
 </body>
