pagina terminada y funcionando

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -628,13 +628,13 @@
 <!-- =========================
      START CONTCT FORM AREA
 ============================== -->
-    <section class="contact page">
+    <section class="contact page" id="CONTACT">
         <div class="section_overlay">
             <div class="container">
                 <div class="col-md-10 col-md-offset-1 wow bounceIn">
                     <!-- Start Contact Section Title-->
                     <div class="section_title">
-                        <h2>Ubícanos</h2>
+                        <h2>Contáctanos</h2>
                         <p>Jr. Franciso Bolognesi 333 Distrito: Independencia Departamento: Lima País: Perú</p>
                     </div>
                 </div>
@@ -669,7 +669,7 @@
      Start Subscription Form
 ============================== -->
 
-    <section class="subscribe parallax subscribe-parallax" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20" id="CONTACT">
+    <section class="subscribe parallax subscribe-parallax" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20" >
         <div class="section_overlay wow lightSpeedIn">
             <div class="container">
                 <div class="row">
