--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -268,7 +268,7 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <div class="container">
+                                    <div class="container active">
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
