agregando algunas fotos

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -308,7 +308,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="pagina/images/client_3.png" alt="">
+                                                <img src="images/fotodemax.jpg" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Max Romario Aqquepucho Huisa</h2>
@@ -344,7 +344,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="pagina/images/client_2.png" alt="">
+                                                <img src="images/fotodecristian.jpg" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Nilton Cristian Pizarro Espinoza</h2>
@@ -362,7 +362,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="pagina/images/client_2.png" alt="">
+                                                <img src="images/fotodejunior.jpg" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Junior Andree Acosta Quispe</h2>
@@ -380,7 +380,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="pagina/images/client_2.png" alt="">
+                                                <img src="images/fotodemarcelo.jpg" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Diego Andree Marcelo Castro</h2>
@@ -398,7 +398,7 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="pagina/images/client_2.png" alt="">
+                                                <img src="images/fotodestacey.jpg" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
                                                     <h2>Stacey Kimberly Camino Ingaroca</h2>
